# Advanced_AI2

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
grading/scratch/: fix_nb_paths.py  verify_paths.py
grading/src/detection/: detector.py
grading/src/explainability/: __init__.py  explainer.py
grading/src/grading/: defect_profiles.py  grader.py  inference.py  ripeness_profiles.py
grading/src/utils/: color_analyzer.py  download.py  download_dataset.py  image_helpers.py  loader.py
grading/tests/: test_detector.py  test_grading.py
notebooks/: 01_data_annotation.ipynb  02_model_training.ipynb  02_yolov10_model_training.ipynb  03_xai_visualization.ipynb  03_yolov10_xai_visualization.ipynb  05_human_in_the_loop_monitoring.ipynb
recommendation/: mock_transactions.json  recommendation.ipynb  recommendation.pkl  rules.pkl
scratch/: test_pipeline.py  update_notebook.py
src/grading/: __init__.py
src/utils/: image_helpers.py
tests/: test_detector.py
