[project]
name = "advanced-ai-project"
version = "0.1.0"
description = "Fruit grading system using YOLOv10, OpenCV, and Explainable AI"
requires-python = ">=3.10"

# ========================
# Ruff - Linter & Formatter
# ========================
[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

# ========================
# Black - Code Formatter
# ========================
[tool.black]
line-length = 120
target-version = ["py310"]

# ========================
# Pytest - Testing
# ========================
[tool.pytest.ini_options]
testpaths = ["grading/tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
